@@ -1,3 +1,9 @@
+2005-08-20  Nate Nielsen  <nielsen@memberwebs.com>
+
+	* src/seahorse-key-widget.c: 
+	* src/seahorse-key-properties.c: Fix problem with key properties
+	window not showing up when opened a second time.
+	
 2005-08-16  Nate Nielsen  <nielsen@memberwebs.com>
 
 	* src/seahorse-key-manager.c: Fix problem with deleting the wrong
